# docbrown

./: .environment.yml  .gitignore  .gitmodules  .readthedocs.yaml  Cargo.toml  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: CI.yml  benchmark.yml  build.yml  code_coverage.yml  publish_builds.yml  release.yml  test.yml  test_python_workflow.yml  test_rust_workflow.yml
algorithms/: Cargo.toml
algorithms/src/: lib.rs  local_triangle_count.rs
benches/: tgraph_benchmarks.rs
docbrown/: Cargo.toml
docbrown/algorithms/: Cargo.toml
docbrown/algorithms/benches/: algobench.rs
docbrown/algorithms/src/: connectedcomponents.rs  lib.rs  trianglecount.rs  wcc.rs
docbrown/benches/: algobench.rs  graph_ops.rs
docbrown/benches/common/: mod.rs
docbrown/core/: Cargo.toml
docbrown/core/benches/: tgraph_benchmarks.rs
docbrown/core/src/: adj.rs  agg.rs  algo.rs  bitset.rs  edge_layer.rs  error.rs  eval.rs  graph.rs  graphview.rs  lazy_vec.rs  lib.rs  meta.rs  props.rs  singlepartitiongraph.rs  sorted_vec_map.rs  state.rs  static_props.rs  tadjset.rs  tgraph.rs  tgraph_shard.rs  tpartition.rs  tprop.rs  utils.rs  vertex.rs  vertexview.rs
docbrown/db/: Cargo.toml
docbrown/db/benches/: algobench.rs  base.rs  benchmark.rs  graph_ops.rs  parameterized.rs
docbrown/db/src/: algorithms.rs  csv_loader.rs  data.rs  edge.rs  graph.rs  graph_immutable.rs  graph_layer.rs  graph_loader.rs  graph_window.rs  graphdb.rs  graphgen.rs  lib.rs  loaders.rs  main.rs  path.rs  perspective.rs  program.rs  vertex.rs  vertex_window.rs  vertices.rs  views.rs
docbrown/pyraphtory/: Cargo.toml  pyproject.toml
docbrown/pyraphtory/src/: lib.rs  loaders.rs  pythontest.py
docbrown/src/: lib.rs
docbrown/src/algorithms/: clustering_coefficient.rs  connected_components.rs  degree.rs  directed_graph_density.rs  hits.rs  local_clustering_coefficient.rs  local_triangle_count.rs  mod.rs  pagerank.rs  reciprocity.rs  three_node_local.rs  three_node_motifs.rs  triangle_count.rs  triplet_count.rs
docbrown/src/core/: agg.rs  edge_layer.rs  mod.rs  props.rs  state.rs  tadjset.rs  tcell.rs  tgraph.rs  tgraph_shard.rs  time.rs  utils.rs
docbrown/src/db/: csv_loader.rs  edge.rs  graph.rs  graph_immutable.rs  graph_layer.rs  graph_window.rs  mod.rs  path.rs  perspective.rs  program.rs  vertex.rs  vertices.rs
docbrown/src/graph_loader/: lotr_graph.rs  mod.rs  reddit_hyperlinks.rs  sx_superuser_graph.rs
docbrown/src/graphgen/: preferential_attachment.rs  random_attachment.rs
docbrown/storage/: Cargo.toml
docbrown/storage/src/: arrow_storage.rs  lib.rs  page_manager.rs  pages.rs
docbrown/storage/src/pages/: arrow_page.rs  mod.rs  vec_page.rs
docs/: .readthedocs.yaml  requirements.txt
docs/source/: conf.py  index.rst
docs/source/Introduction/: api.rst  install.md
docs/source/RustDocs/: apidocs.md
docs/source/api/: index.rst
examples/py/neo4j/: movies.ipynb
examples/py/nft/: nft_analysis.ipynb
examples/rust/: Cargo.toml
it/: Cargo.toml
it/src/: data.rs
pyraphtory/: Cargo.toml
pyraphtory/src/: graph.rs  graph_gen.rs  graph_window.rs  graphdb.rs  lib.rs  loaders.rs  tests.py  wrappers.rs
pyraphtory/tests/: notebook.ipynb  test_graphdb.py
python/: Cargo.toml  pyproject.toml
python/python/raphtory/: __init__.py  graphplot.py  matplotlib.py
python/src/: algorithms.rs  direction.rs  dynamic.rs  edge.rs  graph.rs  graph_gen.rs  graph_loader.rs  graph_view.rs  graph_window.rs  lib.rs  util.rs  vertex.rs  wrappers.rs
python/src/macros/: iter.rs  iterable.rs  mod.rs  nested_iterable.rs  repr.rs
python/tests/: Untitled.ipynb  companies_house_example.ipynb  demo.ipynb  hplotlib.py  notebook.ipynb  reddit_example.ipynb  test_graphdb.py  visualisation.ipynb
raphtory/: Cargo.toml
raphtory/src/: algorithms.rs  graph.rs  graph_gen.rs  graph_window.rs  lib.rs  wrappers.rs
raphtory/tests/: companies_house_notebook.ipynb  notebook.ipynb  test_graphdb.py
src/: graph.rs  lib.rs  main.rs
(+43 files in other folders)
