[package]
name = "docbrown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "pyraphtory"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }

roaring="0.10"
# dashmap="5"
itertools="0.10"
# guardian = "1.0.2"
csv = "1.1.6"
replace_with = "0.1"
thiserror = "1"
rayon = "1"
crossbeam = "0.8"
rand = "0.8.5"
flate2 = "1.0"
# packed_struct = "0.10"
 sorted_vector_map = "0.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "tgraph_benchmarks"
harness = false

[profile.release]
debug = 1

[rust]
debuginfo-level = 1
