[package]
name = "pyraphtory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyraphtory"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.1", features = ["extension-module"] }
docbrown-core = {path = "../core"}
docbrown-db = {path = "../db"}
csv = "1.1.6"
