[package]
name = "docbrown-storage"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# polars-core = "0.26"
arrow2 = { path = "../../arrow2",features = ["compute", "io_ipc"] }
tokio = { version = "1", features = ["full"] }
itertools = "0.10"

[dev-dependencies]
rand = "0.8.5"
